# VideoRAG

./: tmpclaude-d961-cwd
.cursor/plans/: replace_dashscope_with_local_alternatives_3b7ee675.plan.md
Vimo-desktop/: README.md  tmpclaude-11ab-cwd
Vimo-desktop/python_backend/: pyproject.toml  setup.ps1  setup.sh  tmpclaude-2ce1-cwd  videorag_api.py
Vimo-desktop/python_backend/videorag/: _llm.py  videorag.py
Vimo-desktop/python_backend/videorag/_videoutil/: asr.py  caption.py
Vimo-desktop/src/main/handlers/: settings.ts  videorag-handlers.ts
Vimo-desktop/src/renderer/src/components/: InitializationWizard.tsx  VideoRAGConfig.tsx
Vimo-desktop/src/renderer/src/hooks/: useVideoRAG.ts
Vimo-desktop/src/renderer/src/pages/settings/: index.tsx
runners/: run-suite.ps1
